// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/Flag Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Flag
    small={true}
  >
    <div
      className="flag is-small"
    >
      Small
    </div>
  </Flag>
</div>
`;

exports[`Storyshots Prototypes/Flag Small And Warning 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Flag
    small={true}
    warning={true}
  >
    <div
      className="flag is-warning is-small"
    >
      Small and Warning
    </div>
  </Flag>
</div>
`;

exports[`Storyshots Prototypes/Flag Standard 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Flag>
    <div
      className="flag"
    >
      Flag
    </div>
  </Flag>
</div>
`;

exports[`Storyshots Prototypes/Flag Warning 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Flag
    warning={true}
  >
    <div
      className="flag is-warning"
    >
      Warning
    </div>
  </Flag>
</div>
`;
